// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accepts custom bg and color 1`] = `
.c0 {
  font-size: 14px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: white;
  color: accent;
  border-radius: 99999px;
  display: inline-block;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

<div
  className="c0"
  color="accent"
  fontSize={1}
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  font-size: 14px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: primary;
  color: white;
  border-radius: 99999px;
  display: inline-block;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

<div
  className="c0"
  color="white"
  fontSize={1}
/>
`;
